# mathem-mcp-server

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  README.md  cookie.txt.example  mathem.py  pyproject.toml  pytest.ini  recipes.csv  test.py
.claude/skills/ordering-groceries/: SKILL.md
.claude/skills/skill-authoring/: CHECKLIST.md  SIMPLE_EXAMPLE.md  SKILL.md  SKILL_TEMPLATE.md
.claude/skills/writing-recipes/: SKILL.md
